# gym-visualizer

./: .dockerignore  Dockerfile  package-lock.json
backend/: pyproject.toml  requirements.txt
backend/src/: gymnasium_env.py  observation_formatting.py  ocatari_envs.py  server.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  BottomBar.jsx  CodeEditor.jsx  ControlBar.jsx  Editor.jsx  FrameViewer.jsx  MainLayout.jsx  ObsViewer.jsx  StatusBar.jsx  TopBar.jsx  useGymController.js  wsClient.js
frontend/src/ui/: Button.jsx  ControlButton.jsx  InputField.jsx
