[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "gymnasium[accept-rom-license,atari,box2d]>=1.2.3",
    "minigrid>=3.0.0",
    "ocatari>=2.2.1",
    "uvicorn>=0.40.0",
    "websockets>=16.0",
]
